--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>okhttp</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
     </dependencies>
 
 
